@@ -66,7 +66,8 @@ extern MagickExport Image
 
 extern MagickExport MagickBooleanType
   PlasmaImage(Image *,const SegmentInfo *,size_t,size_t),
-  SolarizeImage(Image *,const double);
+  SolarizeImage(Image *,const double),
+  SolarizeImageChannel(Image *,const ChannelType,const double,ExceptionInfo *);
 
 #if defined(__cplusplus) || defined(c_plusplus)
 }
