@@ -1,3 +1,7 @@
+2012-08-24  6.7.9-2 Cristy  <quetzlzacatenango@image...>
+  * Support -channel option for -solarize (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21738).
+
 2012-08-23  6.7.9-1 Cristy  <quetzlzacatenango@image...>
   * New version 6.7.9-1, SVN revision 9095.
 
